--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -1,34 +1,42 @@
-<ion-header>
-  <ion-toolbar color="primary">
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-    <ion-title>Registro</ion-title>
-  </ion-toolbar>
-</ion-header>
+<header>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+</header>
 
 <ion-content>
+  <div class="icon-voltar">
+    <img src="../../assets/icon-voltar.png" alt="Icone Voltar">
+  </div>
+  <div class="logo">
+    <img src="../../assets/wizard-logo.png" width="80%" alt="Logo Wizard">
+  </div>
+  <div class="titulo">
+    <h1>Cadastro</h1>
+  </div>
   <form>
-    <ion-item lines="full">
-      <ion-label position="floating">Primeiro nome</ion-label>
-      <ion-input type="text" required [(ngModel)]="nome" name="nome"></ion-input>
-    </ion-item>
+    <div class="input">
+      <ion-label><strong>Nome</strong></ion-label>
+      <ion-input type="text" required [(ngModel)]="nome" name="nome" placeholder="Nome"></ion-input>
+    </div>
 
-    <ion-item lines="full">
-      <ion-label position="floating">Usuario</ion-label>
-      <ion-input type="email" required [(ngModel)]="email" name="email"></ion-input>
-    </ion-item>
+    <div class="input">
+      <ion-label><strong>E-mail</strong></ion-label>
+      <ion-input type="email" required [(ngModel)]="email" name="email" placeholder="E-mail"></ion-input>
+    </div>
 
-    <ion-item lines="full">
-      <ion-label position="floating">Senha</ion-label>
-      <ion-input type="password" required [(ngModel)]="senha" name="senha"></ion-input>
-    </ion-item>
+    <div class="input">
+      <ion-label><strong>Senha</strong></ion-label>
+      <ion-input type="password" required [(ngModel)]="senha" name="senha" placeholder="Senha"></ion-input>
+    </div>
 
-    <ion-row>
-      <ion-col>
-        <ion-button type="submit" color="secondary" expand="block" (click)="registrar()">Registrar</ion-button>
-      </ion-col>
-    </ion-row>
+    <div class="input">
+      <ion-button type="submit" color="secondary" expand="block" class="ion-button"  (click)="registrar()">Cadastrar</ion-button>
+    </div>
+
+    <div class="link-cadastro">
+      <ion-label>Já tem uma conta?<br> Entre <span>aqui</span></ion-label>
+    </div>
   </form>
 </ion-content>
 
