--- a/src/app/eu-sou/euSou.page.html
+++ b/src/app/eu-sou/euSou.page.html
@@ -1,19 +1,24 @@
-
-
-<ion-content class="auth-form" padding>
-    <div style="text-align: center; padding-top: 45%; padding-bottom: 5%;">
+<header>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+</header>
+<body>
+  <ion-content class="auth-form" padding>
+    <div class="logo">
       <img src="../../assets/wizard-logo.png" width="80%" alt="Logo Wizard">
     </div>
-    <div style="text-align: center;">
-        <h1>Eu sou</h1>
+    <div class="titulo">
+      <h1>Eu sou</h1>
     </div>
     <ion-grid>
       <ion-row>
         <ion-col>
-          <ion-button [routerLink]="['/home/aluno']" expand="block" color="secondary" style="height: 65px; width: 85%; margin-left: auto; margin-right: auto; font-weight: bold;" >Aluno</ion-button>
+          <ion-button [routerLink]="['/home/aluno']" expand="block" color="secondary" class="ion-button">Aluno</ion-button>
 
-          <ion-button [routerLink]="['/home/professor']" expand="block" color="danger" style="height: 65px; width: 85%; margin-left: auto; margin-right: auto; margin-top: 10%; font-weight: bold;">Professor</ion-button>
+          <ion-button [routerLink]="['/home/professor']" expand="block" color="danger" class="ion-button">Professor</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
-    </ion-content>
+  </ion-content>
+</body>
