--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,33 @@
-#container {
+*{
+  font-family: "Gothic A1";
+}
+
+.logo{
+  text-align: center; 
+  padding-top: 45%;
+  padding-bottom: 5%;
+}
+
+.titulo{
   text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  color: #002C4D;
 }
 
-#container strong {
+.ion-button{
+  height: 65px; 
+  width: 85%; 
+  margin-left: auto; 
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 20px;
   font-size: 20px;
-  line-height: 26px;
+  text-transform: none;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+.icon-voltar{
+  height: 30px;
+  width: 30px;
+  position: relative;
+  top: 50px;
+  left: 20px;
 }
