Mais algumas telas

--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -1,4 +1,25 @@
-
-<ion-content>
-Tela Inicial
-</ion-content>
+<header>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  </header>
+  
+    <ion-content class="auth-form" padding>
+      <div class="icon-voltar">
+        <img src="../../assets/icon-voltar.png" alt="Icone Voltar">
+      </div>
+      <div class="logo">
+        <img src="../../assets/wizard-logo.png" width="80%" alt="Logo Wizard">
+      </div>
+      <div class="titulo">
+          <h1>Bem-vindo(a)!</h1>
+          <h1>Menu</h1>
+      </div>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-button [routerLink]="['/minhas-turmas']" expand="block" color="secondary" class="ion-button">Minhas turmas</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-content>
