--- a/src/app/minhas-turmas/minhasTurmas.page.scss
+++ b/src/app/minhas-turmas/minhasTurmas.page.scss
@@ -4,8 +4,13 @@
   
   .logo{
     text-align: center; 
-    padding-top: 45%;
+    padding-top: 20%;
     padding-bottom: 5%;
+  }
+
+  .logo img{
+    height: 50px;
+    width: 210px;
   }
   
   .titulo{
