--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,8 +18,9 @@
       <ion-row>
         <ion-col>
           <ion-button [routerLink]="['/login/'+tipoUsuario]" expand="block" color="secondary" class="ion-button">Login</ion-button>
-
           <ion-button [routerLink]="['/registro/'+tipoUsuario]" expand="block" color="danger" class="ion-button">Cadastro</ion-button>
+          <!-- TESTE -->
+          <ion-button [routerLink]="['/inicio']" expand="block" color="danger" class="ion-button">ENTRAR TESTE</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
