Mais telas feitas

--- a/src/app/chamadas/chamadas.page.scss
+++ b/src/app/chamadas/chamadas.page.scss
@@ -5,7 +5,6 @@
   .logo{
     text-align: center; 
     padding-top: 20%;
-    padding-bottom: 5%;
   }
 
   .logo img{
@@ -17,13 +16,30 @@
     text-align: center;
     color: #002C4D;
   }
+
+  .sub-titulo{
+    color: #002C4D;
+    margin-left: 20px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .sub-titulo img{
+    height: 25px;
+    width: 25px;
+    margin-top: 10px;
+  }
+
+  .titulo-turma{
+    color: #002C4D;
+    margin-left: 20px;
+  }
   
   .ion-button{
     height: 65px; 
-    width: 85%; 
+    width: 85%;
     margin-left: auto; 
     margin-right: auto;
-    margin-top: 10px;
     margin-bottom: 20px;
     font-size: 20px;
     text-transform: none;
