--- a/src/app/turma/turma.page.html
+++ b/src/app/turma/turma.page.html
@@ -2,7 +2,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  </header>
+</header>
   
     <ion-content class="auth-form" padding>
       <div class="icon-voltar">
@@ -14,15 +14,16 @@
       <div class="titulo">
           <h1>Minhas Turmas</h1>
       </div>
+      <div class="sub-titulo">
+        <h4>Segunda-feira</h4>
+        <img src="../../assets/icon-add.png" width="80%" alt="Icone Adicionar">
+      </div>
       <ion-grid>
         <ion-row>
             <ion-col>
-                <ion-button [routerLink]="['/turma']" expand="block" color="secondary" class="ion-button">Segunda-feira</ion-button>
-                <ion-button [routerLink]="[]" expand="block" color="danger" class="ion-button">Terça-feira</ion-button>
-                <ion-button [routerLink]="[]" expand="block" color="secondary" class="ion-button">Quarta-feira</ion-button>
-                <ion-button [routerLink]="[]" expand="block" color="danger" class="ion-button">Quinta-feira</ion-button>
-                <ion-button [routerLink]="[]" expand="block" color="secondary" class="ion-button">Sexta-feira</ion-button>
-                <ion-button [routerLink]="[]" expand="block" color="danger" class="ion-button">Sábado</ion-button>
+                <ion-button [routerLink]="['/turma-info']" expand="block" color="secondary" class="ion-button">Turma Interactive 14h-16h</ion-button>
+                <ion-button [routerLink]="[]" expand="block" color="danger" class="ion-button">Turma Connections 16h-18h</ion-button>
+
             </ion-col>
         </ion-row>
       </ion-grid>
