--- a/src/app/turma/turma.page.scss
+++ b/src/app/turma/turma.page.scss
@@ -17,15 +17,27 @@
     text-align: center;
     color: #002C4D;
   }
+
+  .sub-titulo{
+    color: #002C4D;
+    margin: 20px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .sub-titulo img{
+    height: 25px;
+    width: 25px;
+    margin-top: 10px;
+  }
   
   .ion-button{
     height: 65px; 
     width: 85%; 
     margin-left: auto; 
     margin-right: auto;
-    margin-top: 10px;
     margin-bottom: 20px;
-    font-size: 20px;
+    font-size: 15px;
     text-transform: none;
   }
   
